# NumericalComputingCourse

./: .gitignore  .python-version  README.md  distributed_helpers.py  environment.yml  gpu_helpers.py  main.py  multiprocessing_helpers.py  performance_notebook.ipynb  performance_notebook_MP2.ipynb  performance_notebook_MP3.ipynb  precision_helpers.py  pyproject.toml  w3_profiling.py
helper_funcs/: distributed_helpers.py  gpu_helpers.py  iteration_histogram_opencl.py  multiprocessing_helpers.py  precision_helpers.py  w3_profiling.py
uni_tests/: conftest.py  test_dask.py  test_main.py  test_parallel.py  test_performance.py
